Fix image jumpiness

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -2416,6 +2416,7 @@ hr {
   margin-bottom: 0;
   max-width: 100%;
   max-height: 345px;
+  height: 345px;
   width: auto;
   flex: 1;
   align-content: center;
